--- a/preamble.tex
+++ b/preamble.tex
@@ -147,6 +147,10 @@ maxbibnames=99       % no 'et-al' condensing author names in biliography
 %\DeclareMathOperator*{\argmin}{arg\,min}
 %\DeclareMathOperator*{\argmax}{arg\,max} 
 
+% \ceil operator
+\usepackage{mathtools}
+\DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
+
 \usepackage{tikz}
 \def\checkmark{\tikz\fill[scale=0.2](0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;}
 
