--- a/sec/bugs.tex
+++ b/sec/bugs.tex
@@ -6,11 +6,16 @@ This section reports on the results of extensive testing of OpenCL compilers usi
 
 We found numerous cases where a kernel triggers a crash in the compiler (and as a result, the host process). Figure~\ref{lst:intel-llvm-assertion} fails an assertion from the LLVM code generator backend. Segmentation faults during compilation were a common source of crash. Figure~\ref{lst:intel-vectorizer-segfault} segfaults during the vectorizer pass. Occasionally, the cause of the crash is unclear, such as in Figure~\ref{lst:nvidia-compile-segfault} which segfaults the compiler without warning.
 
+In the majority of cases, we found compiler crashes to be insensitive to OpenCL optimization setting. Figure~\ref{lst:nvidia-compile-segfault} shows a rare case where a crash occurs only if optimizations are enabled.
+
+\input{lst/compiler-crash-bugs}
 
 \subsection{Runtime Crashes}
 
-Figure~\ref{lst:pocl-undefined-symbols} exposes a bug in POCL in which a kernel containing an undefined symbol will successfully compile without warning, then crash the program when attempting to run the kernel. Such a test case is trivial to generate, yet could not be synthesized by CSmith.
+Figure~\ref{lst:pocl-undefined-symbols} exposes a bug in in which a kernel containing an undefined symbol will successfully compile without warning, then crash the program when attempting to run the kernel. Such a test case is trivial to generate, yet could not be synthesized by CSmith.
+
+\input{lst/runtime-crash-bugs}
 
 \subsection{Wrong-code Bugs}
 
-\input{lst/bugs}
+\input{lst/wrong-code-bugs}
