--- a/lst/compiler-crash-bugs.tex
+++ b/lst/compiler-crash-bugs.tex
@@ -9,13 +9,29 @@
 		}%
 		\label{lst:intel-llvm-assertion}
 	}\\%
-	\subfloat[Segementation fault in Vectorizer pass of config $5\pm$.]{%
+	\subfloat[Segementation fault in vectorizer pass of config $5\pm$.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% coCLgenResults/segfaults/bug-report-intel-43729.c
 				\lstinputlisting{lst/bug5}%
 			}%
 		}%
 		\label{lst:intel-vectorizer-segfault}
+	}\\%
+	\subfloat[Config $10\pm$ compiler assertion during semantic analysis.]{%
+		\noindent\mbox{\parbox{\columnwidth}{%
+				% bug-reports/CLgenResults/bc/oclgrind-typos/bug-report-oclgrind-165430.c
+				\lstinputlisting{lst/bug7}%
+			}%
+		}%
+		\label{lst:oclgrind-sema-assertion}
+	}\\%
+	\subfloat[Config $10\pm$ compiler assertion from \texttt{llvm::DenseMap} when global size > 1.]{%
+		\noindent\mbox{\parbox{\columnwidth}{%
+				% bug-reports/CLgenResults/bc/oclgrind-densemap/bug-report-oclgrind-434050.c
+				\lstinputlisting{lst/bug8}%
+			}%
+		}%
+		\label{lst:oclgrind-llvm-densemap-assertion}
 	}\\%
 	\subfloat[Config $1\pm$ segementation fault.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
@@ -25,7 +41,7 @@
 		}%
 		\label{lst:nvidia-compile-segfault}
 	}\\%
-	\subfloat[Config $7+$ segementation fault.]{%
+	\subfloat[Config $7\pm$ segementation fault.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% bug-reports/coCLgenResults/segfaults/bug-report-intel-69539.c
 				\lstinputlisting{lst/xeon-phi-segfault}%
