--- a/lst/compiler-crash-bugs.tex
+++ b/lst/compiler-crash-bugs.tex
@@ -1,15 +1,7 @@
 \lstset{language=[OpenCL]C}
 \begin{figure}
 	\centering %
-	\subfloat[Config $2\pm$ compiler assertion during code generation.]{%
-		\noindent\mbox{\parbox{\columnwidth}{%
-				% cl_launcherCLgenResults/runtime_crash/bug-report-intel-30870.sh
-				\lstinputlisting{lst/bug1}%
-			}%
-		}%
-		\label{lst:intel-llvm-assertion}
-	}\\%
-	\subfloat[Segementation fault in vectorizer pass of config $5\pm$.]{%
+	\subfloat[Config $5\pm$ segementation fault in vectorizer pass.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% coCLgenResults/segfaults/bug-report-intel-43729.c
 				\lstinputlisting{lst/bug5}%
@@ -25,7 +17,7 @@
 		}%
 		\label{lst:oclgrind-sema-assertion}
 	}\\%
-	\subfloat[Config $10\pm$ compiler assertion from \texttt{llvm::DenseMap} when global size > 1.]{%
+	\subfloat[Config $10\pm$ compiler assertion when global size > 1.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% bug-reports/CLgenResults/bc/oclgrind-densemap/bug-report-oclgrind-434050.c
 				\lstinputlisting{lst/bug8}%
@@ -41,6 +33,14 @@
 		}%
 		\label{lst:nvidia-compile-segfault}
 	}\\%
+	\subfloat[Configs $1\pm$ and $2\pm$ segementation fault.]{%
+		\noindent\mbox{\parbox{\columnwidth}{%
+				% bug-reports/CLgenResults/segfaults/bug-report-nvidia-561489.c
+				\lstinputlisting{lst/bug11}%
+			}%
+		}%
+		\label{lst:nvidia-recursion-segfault}
+	}\\%
 	\subfloat[Config $7\pm$ segementation fault.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% bug-reports/coCLgenResults/segfaults/bug-report-intel-69539.c
@@ -50,5 +50,28 @@
 		\label{lst:nvidia-compile-segfault}
 	}%
 	\caption{Example kernels which expose compiler crash bugs.}%
+	\label{lst:compiler-crash-bugs}%
+\end{figure}
+
+\lstset{language=[OpenCL]C}
+\begin{figure}
+	\centering %
+	\subfloat[Config $3\pm$ assertion during code generation for storing pointer values.]{%
+		\noindent\mbox{\parbox{\columnwidth}{%
+				% cl_launcherCLgenResults/runtime_crash/bug-report-intel-30870.sh
+				\lstinputlisting{lst/bug1}%
+			}%
+		}%
+		\label{lst:intel-llvm-assertion}
+	}\\%
+	\subfloat[Config $3\pm$ assertion during code generation for scalar types.]{%
+		\noindent\mbox{\parbox{\columnwidth}{%
+				% bug-reports/CLgenResults/bc/scalar-type/bug-report-intel-534566.c
+				\lstinputlisting{lst/bug10}%
+			}%
+		}%
+		\label{lst:intel-scalartype-assertion}
+	}%
+	\caption{Kernels which expose compiler back-end bugs.}%
 	\label{lst:compiler-crash-bugs}%
 \end{figure}
