--- a/sec/bugs.tex
+++ b/sec/bugs.tex
@@ -4,11 +4,21 @@ This section reports on the results of extensive testing of OpenCL compilers usi
 
 \subsection{Compiler Crashes}
 
-We found numerous cases where a kernel triggers a crash in the compiler (and as a result, the host process). Figure~\ref{lst:intel-llvm-assertion} fails an assertion from the LLVM code generator backend. Segmentation faults during compilation were a common source of crash. Figure~\ref{lst:intel-vectorizer-segfault} segfaults during the vectorizer pass. Occasionally, the cause of the crash is unclear, such as in Figure~\ref{lst:nvidia-compile-segfault} which segfaults the compiler without warning.
+We found numerous cases where a kernel triggers a crash in the compiler (and as a result, the host process). Segmentation faults during compilation were a common source of crash. Occasionally, the cause of the crash is unclear, such as in Figures~\ref{lst:nvidia-recursion-segfault} and~\ref{lst:nvidia-compile-segfault} which segfault the compiler without warning. We found the two commercial vendors NVIDIA and Intel were the most likely to fail silently.
+
+In the majority of cases, we found compiler crashes to be insensitive to OpenCL optimization setting.
+
+Our testing revealed bugs in relatively benign and stable parts of mature compilers, such as Figure~\ref{lst:oclgrind-llvm-densemap-assertion}, which exposes a bug in LLVM's hash map implementation.
+
+\paragraph{Front-end} We found the most bugs in compiler frontends. Because of the large volume of ill-formed test cases, our approach is biased towards discovering bugs in the early stages of compilation: lexing and parsing.
 
 Figure~\ref{lst:oclgrind-sema-assertion} raises an assertion in the compiler frontend during semantic analysis of the AST for configurations $10\pm$. Though the code \emph{plausibly} looks correct, it is ill-formed as the identifiers \texttt{d} and \texttt{f} are undefined; all other configurations raise a build failure. Such test cases (in which the code \emph{looks} right, but contains errors) are extremely unlikely through random string testing, and impossible through grammar-based tools.
 
-In the majority of cases, we found compiler crashes to be insensitive to OpenCL optimization setting. Our testing revealed bugs in relatively benign and stable parts of mature compilers, such as Figure~\ref{lst:oclgrind-llvm-densemap-assertion}, which exposes a bug in LLVM's hash map implementation.
+Parsers were a common source of errors. To date we have identified over 60 cases where unreachable code is executed due to parse error handling. 
+
+\paragraph{Middle-end} Figure~\ref{lst:intel-vectorizer-segfault} segfaults during the vectorizer pass.
+
+\paragraph{Back-end} Figures~\ref{lst:intel-llvm-assertion} and~\ref{lst:intel-scalartype-assertion} cause failures in the LLVM code generator backend.
 
 \input{lst/compiler-crash-bugs}
 
