--- a/difftest/Difftest Results.ipynb
+++ b/difftest/Difftest Results.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -20,7 +20,7 @@
        "'mysql://cc1:3306/project_b'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
        "    <tr>\n",
        "      <th>#. Programs</th>\n",
        "      <td>10500</td>\n",
-       "      <td>32664</td>\n",
+       "      <td>33329</td>\n",
        "      <td>2385</td>\n",
        "      <td>3385</td>\n",
        "    </tr>\n",
@@ -84,8 +84,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>#. Results</th>\n",
-       "      <td>339776</td>\n",
-       "      <td>643254</td>\n",
+       "      <td>342943</td>\n",
+       "      <td>650840</td>\n",
        "      <td>66780</td>\n",
        "      <td>53840</td>\n",
        "    </tr>\n",
@@ -95,13 +95,13 @@
       ],
       "text/plain": [
        "             CLSmith   CLgen  CLgen w. cl_launcher  CLgen w. co\n",
-       "#. Programs    10500   32664                  2385         3385\n",
+       "#. Programs    10500   33329                  2385         3385\n",
        "#. Testbeds       11      10                     7            7\n",
        "#. Params          4       6                     4            4\n",
-       "#. Results    339776  643254                 66780        53840"
+       "#. Results    342943  650840                 66780        53840"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -235,9 +235,17 @@
      "output_type": "stream",
      "text": [
       "Current branch master is up to date.\n",
-      "On branch master\n",
-      "Your branch is up-to-date with 'origin/master'.\n",
-      "nothing to commit, working directory clean\n"
+      "[master 473dfaa] auto: build/tab/platforms.tex\n",
+      " 1 file changed, 9 insertions(+), 9 deletions(-)\n",
+      "Counting objects: 5, done.\n",
+      "Delta compression using up to 16 threads.\n",
+      "Compressing objects: 100% (5/5), done.\n",
+      "Writing objects: 100% (5/5), 501 bytes | 0 bytes/s, done.\n",
+      "Total 5 (delta 3), reused 0 (delta 0)\n",
+      "remote: Resolving deltas: 100% (3/3)\u001b[K\u001b[K\n",
+      "remote: Updating references: 100% (1/1)\u001b[K\u001b[K\n",
+      "To https://git.overleaf.com/8608915dsywxshwwjmw\n",
+      "   8ea2646..473dfaa  master -> master\n"
      ]
     },
     {
@@ -270,9 +278,9 @@
        "      <td>1.2</td>\n",
        "      <td>Ubuntu 16.04 64bit</td>\n",
        "      <td>GPU</td>\n",
-       "      <td>49h</td>\n",
+       "      <td>50h</td>\n",
        "      <td>57</td>\n",
-       "      <td>20</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -285,7 +293,7 @@
        "      <td>GPU</td>\n",
        "      <td>6h</td>\n",
        "      <td>24</td>\n",
-       "      <td>6</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -298,7 +306,7 @@
        "      <td>GPU</td>\n",
        "      <td>4h</td>\n",
        "      <td>276</td>\n",
-       "      <td>112</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -309,9 +317,9 @@
        "      <td>2.0</td>\n",
        "      <td>Ubuntu 16.04 64bit</td>\n",
        "      <td>CPU</td>\n",
-       "      <td>16h</td>\n",
+       "      <td>17h</td>\n",
        "      <td>1749</td>\n",
-       "      <td>922</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -324,7 +332,7 @@
        "      <td>CPU</td>\n",
        "      <td>13h</td>\n",
        "      <td>923</td>\n",
-       "      <td>362</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -337,7 +345,7 @@
        "      <td>CPU</td>\n",
        "      <td>4h</td>\n",
        "      <td>446</td>\n",
-       "      <td>304</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -350,7 +358,7 @@
        "      <td>Accelerator</td>\n",
        "      <td>36h</td>\n",
        "      <td>81</td>\n",
-       "      <td>27</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -363,7 +371,7 @@
        "      <td>CPU</td>\n",
        "      <td>24h</td>\n",
        "      <td>2017</td>\n",
-       "      <td>956</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -387,9 +395,9 @@
        "      <td>1.2</td>\n",
        "      <td>Ubuntu 16.04 64bit</td>\n",
        "      <td>Emulator</td>\n",
-       "      <td>21h</td>\n",
+       "      <td>23h</td>\n",
        "      <td>4495</td>\n",
-       "      <td>1173</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -409,31 +417,31 @@
        "9  10              Oclgrind            Oclgrind Simulator     16.10    1.2   \n",
        "\n",
        "       Operating system  Device type Testing time  B.R. Generated  \\\n",
-       "0    Ubuntu 16.04 64bit          GPU          49h              57   \n",
+       "0    Ubuntu 16.04 64bit          GPU          50h              57   \n",
        "1  openSUSE  13.1 64bit          GPU           6h              24   \n",
        "2    Ubuntu 16.04 64bit          GPU           4h             276   \n",
-       "3    Ubuntu 16.04 64bit          CPU          16h            1749   \n",
+       "3    Ubuntu 16.04 64bit          CPU          17h            1749   \n",
        "4      CentOS 7.1 64bit          CPU          13h             923   \n",
        "5    Ubuntu 16.04 64bit          CPU           4h             446   \n",
        "6      CentOS 7.1 64bit  Accelerator          36h              81   \n",
        "7    Ubuntu 16.04 64bit          CPU          24h            2017   \n",
        "8    Ubuntu 16.04 64bit          CPU           0h               0   \n",
-       "9    Ubuntu 16.04 64bit     Emulator          21h            4495   \n",
+       "9    Ubuntu 16.04 64bit     Emulator          23h            4495   \n",
        "\n",
        "   B.R. Submitted  \n",
-       "0              20  \n",
-       "1               6  \n",
-       "2             112  \n",
-       "3             922  \n",
-       "4             362  \n",
-       "5             304  \n",
-       "6              27  \n",
-       "7             956  \n",
+       "0               0  \n",
+       "1               0  \n",
+       "2               0  \n",
+       "3               0  \n",
+       "4               0  \n",
+       "5               0  \n",
+       "6               0  \n",
+       "7               0  \n",
        "8               0  \n",
-       "9            1173  "
+       "9               0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,10 +458,16 @@
     "    submitable_results = [coCLgenResult, cl_launcherCLgenResult, CLgenResult]\n",
     "    \n",
     "    def get_submitted(table):\n",
-    "        return session.query(table).filter(table.testbed_id == testbed.id, table.submitted).count()\n",
+    "        \"\"\" submitted, non-duplicate bugs \"\"\"\n",
+    "        return session.query(table)\\\n",
+    "            .filter(table.testbed_id == testbed.id,\n",
+    "                    table.submitted,\n",
+    "                    table.dupe != 1).count()\n",
     "\n",
     "    def get_generated(table):\n",
-    "        return session.query(table).filter(table.testbed_id == testbed.id, sql.or_(table.submitted, table.dupe)).count()\n",
+    "        return session.query(table)\\\n",
+    "            .filter(table.testbed_id == testbed.id,\n",
+    "                    sql.or_(table.submitted, table.dupe)).count()\n",
     "\n",
     "    runtime_tables = [coCLgenResult, CLgenResult, cl_launcherCLgenResult]\n",
     "    def get_runtime(table):\n",
