--- a/lst/compiler-crash-bugs.tex
+++ b/lst/compiler-crash-bugs.tex
@@ -1,7 +1,7 @@
 \lstset{language=[OpenCL]C}
 \begin{figure}
 	\centering %
-	\subfloat[Config $5\pm$ segementation fault in vectorizer pass.]{%
+	\subfloat[Configs.\ $5\pm$ segementation fault in vectorizer pass.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% coCLgenResults/segfaults/bug-report-intel-43729.c
 				\lstinputlisting{lst/bug5}%
@@ -9,7 +9,7 @@
 		}%
 		\label{lst:intel-vectorizer-segfault}
 	}\\%
-	\subfloat[Config $10\pm$ compiler assertion during semantic analysis.]{%
+	\subfloat[Configs.\ $10\pm$ compiler assertion during semantic analysis.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% bug-reports/CLgenResults/bc/oclgrind-typos/bug-report-oclgrind-165430.c
 				\lstinputlisting{lst/bug7}%
@@ -17,7 +17,7 @@
 		}%
 		\label{lst:oclgrind-sema-assertion}
 	}\\%
-	\subfloat[Config $10\pm$ compiler assertion when global size > 1.]{%
+	\subfloat[Configs.\ $10\pm$ compiler assertion when global size > 1.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% bug-reports/CLgenResults/bc/oclgrind-densemap/bug-report-oclgrind-434050.c
 				\lstinputlisting{lst/bug8}%
@@ -25,7 +25,7 @@
 		}%
 		\label{lst:oclgrind-llvm-densemap-assertion}
 	}\\%
-	\subfloat[Config $1\pm$ segementation fault.]{%
+	\subfloat[Configs.\ $1\pm$ segementation fault.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% bug-reports/coCLgenResults/segfaults/bug-report-nvidia-21742.c
 				\lstinputlisting{lst/bug6}%
@@ -33,7 +33,7 @@
 		}%
 		\label{lst:nvidia-compile-segfault}
 	}\\%
-	\subfloat[Configs $1\pm$ and $2\pm$ segementation fault.]{%
+	\subfloat[Configs.\ $1\pm$, $2\pm$ segementation fault.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% bug-reports/CLgenResults/segfaults/bug-report-nvidia-561489.c
 				\lstinputlisting{lst/bug11}%
@@ -41,7 +41,7 @@
 		}%
 		\label{lst:nvidia-recursion-segfault}
 	}\\%
-	\subfloat[Config $7\pm$ segementation fault.]{%
+	\subfloat[Configs.\ $7\pm$ segementation fault.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% bug-reports/coCLgenResults/segfaults/bug-report-intel-69539.c
 				\lstinputlisting{lst/xeon-phi-segfault}%
@@ -56,7 +56,7 @@
 \lstset{language=[OpenCL]C}
 \begin{figure}
 	\centering %
-	\subfloat[Config $3\pm$ assertion during code generation for storing pointer values.]{%
+	\subfloat[Configs.\ $3\pm$ assertion during code generation for storing pointer values.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% cl_launcherCLgenResults/runtime_crash/bug-report-intel-30870.sh
 				\lstinputlisting{lst/bug1}%
@@ -64,7 +64,7 @@
 		}%
 		\label{lst:intel-llvm-assertion}
 	}\\%
-	\subfloat[Config $3\pm$ assertion during code generation for scalar types.]{%
+	\subfloat[Configs.\ $3\pm$ assertion during code generation for scalar types.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% bug-reports/CLgenResults/bc/scalar-type/bug-report-intel-534566.c
 				\lstinputlisting{lst/bug10}%
