--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -42,6 +42,20 @@ A majority exists if there are at least 6 non-bc results for the kernel, and of 
 \end{enumerate}
 
 
+\begin{tabular}{ c|ccc }
+	\toprule
+	\multirow{2}{*}{$\mu$} & \multicolumn{3}{c}{\textbf{Minority outcome}} \\
+	 & \textbf{bf} & \textbf{c} & \textbf{\cmark} \\
+	\midrule
+	\textbf{bf} & - & $\bar{bf}$ & ? \\
+	\textbf{c} & c & - & ? \\
+	\textbf{\cmark} & bf & c & - \\
+	\bottomrule
+\end{tabular}
+
+
+
+
 \paragraph{Floating points} The OpenCL 1.2 specification permits acceptable error bounds (ULP) for floating point operations and builtin functions. Some operations like addition, subtraction, and multiplication are precise; divide permits a small error, and builtins vary widely. Thus two implementation may give different answers that both fit within the allowed ranges (and because errors propagate through operations it's hard to even describe the ULP on the final output). \texttt{half\_} functions permit large error bounds. \texttt{native\_} functions have ``implementation defined'' error bounds. TODO: Denormal numbers may optionally be pushed to zero.
 
 CSmith, and by extension, CLSmith, do not support floating point operations. In our observations with testing using CLSmith (described in Section~\ref{sec:vs_clsmith}), we observed that in cases of wrong-code bugs, the computed values are usually entirely incorrect, not only marginally different. We hypothesized that by allowing relaxed comparisons between floating point values, we could still differential test. We permit a margin of deviation for floating point comparisons. This means that if a compiler were to emit wrong code which changes the computed value only subtly, we may miss it; though we have no reason to suggest that such a case is any more likely than a wrong code bug leading the compiler to produce exactly the same output, which neither we or any prior work have noted.
