--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -34,6 +34,8 @@ Once voting heuristics have been applied, the result is table~\ref{tab:classific
 
 \cc{TODO: How long do reductions take? How many CLgen test cases can we run in that amount of time? Given the ratio of interesting CLgen test cases, how many more bugs could we find in the amount of time it takes to run a single reduction?}
 
+\cc{TODO: We note that we tested the wrong-code classification of CLSmith, finding that it does not affect the number of CLSmith wrong-code bugs.}
+
 
 \subsection{Analysis of bugs found}
 
