--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -42,19 +42,22 @@ A majority exists if there are at least 6 non-bc results for the kernel, and of 
 \end{enumerate}
 
 
-\begin{tabular}{ c|ccc }
-	\toprule
-	\multirow{2}{*}{$\mu$} & \multicolumn{3}{c}{\textbf{Minority outcome}} \\
-	 & \textbf{bf} & \textbf{c} & \textbf{\cmark} \\
-	\midrule
-	\textbf{bf} & - & $\bar{bf}$ & ? \\
-	\textbf{c} & c & - & ? \\
-	\textbf{\cmark} & bf & c & - \\
-	\bottomrule
-\end{tabular}
-
-
-
+\begin{table}
+	\scriptsize %
+	\centering %
+	\begin{tabular}{ c|ccc }
+		\toprule
+		 & \multicolumn{3}{c}{\textbf{Minority outcome}} \\
+		 & \textbf{bf} & \textbf{c} & \textbf{\cmark} \\
+		\midrule
+		\textbf{bf} & \cmark & ? & ? \\
+		\textbf{c} & c & \cmark & ? \\
+		\textbf{\cmark} & bf & c & \cmark \\
+		\bottomrule
+	\end{tabular}
+	\caption{Voting heuristics to determine the classification of results based on the majority outcome (rows) \cc{wtf is this\ldots}}
+	\label{tab:voting-heuristics}
+\end{table}
 
 \paragraph{Floating points} The OpenCL 1.2 specification permits acceptable error bounds (ULP) for floating point operations and builtin functions. Some operations like addition, subtraction, and multiplication are precise; divide permits a small error, and builtins vary widely. Thus two implementation may give different answers that both fit within the allowed ranges (and because errors propagate through operations it's hard to even describe the ULP on the final output). \texttt{half\_} functions permit large error bounds. \texttt{native\_} functions have ``implementation defined'' error bounds. TODO: Denormal numbers may optionally be pushed to zero.
 
