--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -36,6 +36,7 @@ Once voting heuristics have been applied, the result is table~\ref{tab:classific
 
 \cc{TODO: We note that we tested the wrong-code classification of CLSmith, finding that it does not affect the number of CLSmith wrong-code bugs.}
 
+The 2357 \textbf{bf} results for CLSmith on Configs.\ $4\pm$ and $6\pm$ are all a result of compilers rejecting empty declarations, e.g. \texttt{int ;}, which CLSmith occasionally emits. % Known issue: https://github.com/ChrisLidbury/CLSmith/issues/7
 
 \subsection{Analysis of bugs found}
 
