--- a/sec/overview.tex
+++ b/sec/overview.tex
@@ -10,7 +10,7 @@
 	\centering %
 	% \rowcolors{2}{white}{gray!25}
 	\input{build/tab/platforms}
-	\caption{OpenCL configurations we tested, the total time spent running tests, and the number of bug reports submitted to date.}
+	\caption{OpenCL configurations we tested, the time spent in automated testing, and the number of bug reports submitted to date.}
 	\label{tab:platforms}
 \end{table*}
 
