--- a/lst/compiler-crash-bugs.tex
+++ b/lst/compiler-crash-bugs.tex
@@ -17,7 +17,7 @@
 		}%
 		\label{lst:oclgrind-sema-assertion}
 	}\\%
-	\subfloat[Configs.\ $10\pm$ compiler assertion when global size > 1.]{%
+	\subfloat[Configs.\ $10\pm$ compiler assertion from \texttt{llvm::densemap} when global size > 1.]{%
 		\noindent\mbox{\parbox{\columnwidth}{%
 				% bug-reports/CLgenResults/bc/oclgrind-densemap/bug-report-oclgrind-434050.c
 				\lstinputlisting{lst/bug8}%
