--- a/difftest/Bug Reports.ipynb
+++ b/difftest/Bug Reports.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -11,14 +11,19 @@
        "'mysql://cc1:3306/project_b'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import db as db\n",
     "import sqlalchemy as sql\n",
+    "import cldrive\n",
+    "import sys\n",
+    "from labm8 import crypto\n",
+    "\n",
+    "import analyze\n",
+    "import db\n",
     "from db import *\n",
     "%run util.py\n",
     "\n",
@@ -30,56 +35,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# coCLgenResults"
+    "# Bug Report generator"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "TABLE_NAME = \"CLgen\"\n",
-    "TABLE = coCLgenResult"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import cldrive\n",
-    "import sys\n",
+    "def comment(*msg, prefix=''):\n",
+    "    return '\\n'.join(f'// {prefix}{line}' for line in \" \".join(msg).strip().split('\\n'))\n",
     "\n",
-    "def get_co_report(result_id: int, table=coCLgenResult, report_type: str=\"bf\"):\n",
+    "def get_bug_report(result_id: int, table=CLgenResult, report_type: str=\"bf\"):\n",
     "    with Session(commit=False) as s:\n",
     "        result = s.query(table).filter(table.id == result_id).first()\n",
     "\n",
     "        if not result:\n",
     "            raise KeyError(f\"no result with ID {result_id}\")\n",
     "\n",
-    "        flags = result.params.to_flags()\n",
-    "        program = result.program\n",
-    "\n",
     "        # generate bug report\n",
     "        now = datetime.datetime.utcnow().isoformat()\n",
-    "\n",
+    "        report_id = crypto.md5_str(table.__name__) + \"-\" + str(result.id)\n",
     "        bug_type = {\n",
     "            \"bf\": \"compilation failure\",\n",
     "            \"bc\": \"compiler crash\",\n",
     "            \"c\": \"runtime crash\",\n",
+    "            \"w\": \"wrong-code\"\n",
     "        }[report_type]\n",
-    "\n",
-    "        report_id = crypto.md5_str(table.__name__) + \"-\" + str(result.id)\n",
-    "        result_output = '\\n'.join([f'//   {line}' for line in result.stderr.strip().split('\\n')\n",
-    "                                   if not line.startswith(\"+ \")])\n",
-    "        header = f\"\"\"\n",
-    "// bug report {report_id}.c\n",
+    "        \n",
+    "        header = f\"\"\"\\\n",
+    "// {bug_type} bug report {report_id}.c\n",
     "// \n",
     "// Metadata:\n",
     "//   OpenCL platform:        {result.testbed.platform}\n",
@@ -89,23 +77,34 @@
     "//   Host operating system:  {result.testbed.host}\n",
     "//   OpenCL optimizations:   {result.params.optimizations_on_off}\n",
     "//\n",
+    "\"\"\"\n",
+    "        if bug_type == \"bc\":\n",
+    "            result_output = comment(result.stderr, prefix='  ')\n",
+    "            header += f\"\"\"\\\n",
     "// Output:\n",
     "{result_output}\n",
     "//   [Return code {result.status}]\n",
-    "//\\\n",
+    "//\n",
+    "\"\"\"    \n",
+    "        elif bug_type == \"w\":\n",
+    "            result_output = comment(result.stdout, prefix='  ')\n",
+    "            majority_output = analyze.get_majority_output(result)\n",
+    "            assert majority_output != result_output\n",
+    "            header += f\"\"\"\\\n",
+    "// Output:\n",
+    "{result_output}\n",
+    "//\n",
+    "// Expected output:\n",
+    "{majority_output}\n",
+    "//\n",
     "\"\"\"\n",
-    "        if isinstance(program, CLgenProgram):\n",
+    "            \n",
+    "        if isinstance(result.program, CLgenProgram):\n",
     "            src = s.query(CLgenHarness).filter(\n",
-    "                CLgenHarness.program_id == program.id,\n",
+    "                CLgenHarness.program_id == result.program.id,\n",
     "                CLgenHarness.params_id == result.params.id).first().src\n",
     "        else:\n",
-    "            src = cldrive.emit_c(\n",
-    "                env=cldrive.make_env(),\n",
-    "                src=result.program.src,\n",
-    "                compile_only=True,\n",
-    "                create_kernel=result.params.build_kernel,\n",
-    "                gsize=None, lsize=None, inputs=None,\n",
-    "            )\n",
+    "            src = result.program.src\n",
     "        return (header + src).strip()"
    ]
   },
@@ -113,7 +112,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Segfaults:"
+    "# coCLgenResults"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "TABLE_NAME = \"CLgen\"\n",
+    "TABLE = coCLgenResult"
    ]
   },
   {
@@ -158,7 +169,7 @@
     "        vendor = PLATFORMS_2_VENDORS[result.testbed.platform]\n",
     "        outpath = fs.path(outbox, f\"bug-report-{vendor}-{result.id}.c\")            \n",
     "\n",
-    "        report = get_co_report(**{\n",
+    "        report = get_bug_report(**{\n",
     "            \"result_id\": result.id,\n",
     "            \"table\": coCLgenResult,\n",
     "        })\n",
@@ -175,15 +186,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CLGenResults"
+    "# Compile-crash bugs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "TABLE_NAME = \"CLgen\"\n",
@@ -1129,7 +1138,7 @@
     }
    ],
    "source": [
-    "outbox = fs.path(\"outbox\", \"CLgenResults\", \"bc\")\n",
+    "outbox = fs.path(\"outbox\", f\"{TABLE_NAME}Results\", \"bc\")\n",
     "fs.mkdir(outbox)\n",
     "with Session(commit=False) as s:\n",
     "    q = s.query(TABLE)\\\n",
@@ -1152,10 +1161,130 @@
     "        vendor = PLATFORMS_2_VENDORS[result.testbed.platform]\n",
     "        outpath = fs.path(outbox, f\"bug-report-{vendor}-{result.id}.c\")            \n",
     "\n",
-    "        report = get_co_report(**{\n",
+    "        report = get_bug_report(**{\n",
     "            \"result_id\": result.id,\n",
-    "            \"table\": CLgenResult,\n",
+    "            \"table\": TABLE,\n",
     "            \"report_type\": \"bc\",\n",
+    "        })\n",
+    "\n",
+    "        with open(outpath, \"w\") as outfile:\n",
+    "            print(report, file=outfile)\n",
+    "        result.submitted = 1\n",
+    "        print(outpath)\n",
+    "print(\"done\")\n",
+    "print(f\"{dupes} duplicates flagged\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Wrong-code Bugs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# TABLE_NAME = \"CLgen\"\n",
+    "# TABLE = CLgenResult\n",
+    "TABLE_NAME = \"CLSmith\"\n",
+    "TABLE = CLSmithResult"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "outbox/CLSmithResults/w/bug-report-nvidia-4321.c\n",
+      "outbox/CLSmithResults/w/bug-report-nvidia-5929.c\n",
+      "outbox/CLSmithResults/w/bug-report-nvidia-7825.c\n",
+      "outbox/CLSmithResults/w/bug-report-nvidia-11110.c\n",
+      "outbox/CLSmithResults/w/bug-report-nvidia-11416.c\n",
+      "outbox/CLSmithResults/w/bug-report-nvidia-14161.c\n",
+      "outbox/CLSmithResults/w/bug-report-nvidia-15622.c\n",
+      "outbox/CLSmithResults/w/bug-report-nvidia-17939.c\n",
+      "outbox/CLSmithResults/w/bug-report-oclgrind-83628.c\n",
+      "outbox/CLSmithResults/w/bug-report-oclgrind-239179.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-247202.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-247794.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-249112.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-249657.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-253650.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-256540.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-257207.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-262194.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-262420.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-267375.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-268828.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-271978.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-275571.c\n",
+      "outbox/CLSmithResults/w/bug-report-pocl-282009.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-362654.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-369257.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-374426.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-377644.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-382537.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-386657.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-387779.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-405868.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-406428.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-429696.c\n",
+      "outbox/CLSmithResults/w/bug-report-nvidia-434666.c\n",
+      "outbox/CLSmithResults/w/bug-report-nvidia-435147.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-436811.c\n",
+      "outbox/CLSmithResults/w/bug-report-nvidia-447426.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-449598.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-469532.c\n",
+      "outbox/CLSmithResults/w/bug-report-codeplay-478848.c\n",
+      "outbox/CLSmithResults/w/bug-report-codeplay-479608.c\n",
+      "outbox/CLSmithResults/w/bug-report-codeplay-480337.c\n",
+      "outbox/CLSmithResults/w/bug-report-codeplay-486977.c\n",
+      "outbox/CLSmithResults/w/bug-report-codeplay-487127.c\n",
+      "outbox/CLSmithResults/w/bug-report-codeplay-487476.c\n",
+      "outbox/CLSmithResults/w/bug-report-intel-497034.c\n",
+      "outbox/CLSmithResults/w/bug-report-codeplay-503952.c\n",
+      "outbox/CLSmithResults/w/bug-report-codeplay-509326.c\n",
+      "done\n",
+      "24 duplicates flagged\n"
+     ]
+    }
+   ],
+   "source": [
+    "outbox = fs.path(\"outbox\", f\"{TABLE_NAME}Results\", \"w\")\n",
+    "fs.mkdir(outbox)\n",
+    "with Session(commit=False) as s:\n",
+    "    q = s.query(TABLE)\\\n",
+    "        .filter(TABLE.classification == \"w\")\\\n",
+    "        .order_by(TABLE.id)\n",
+    "\n",
+    "    dupes = 0\n",
+    "    errs = set()\n",
+    "    for result in q:\n",
+    "        key = result.testbed_id, result.program_id\n",
+    "\n",
+    "        if key in errs:\n",
+    "            dupes += 1\n",
+    "            result.dupe = 1\n",
+    "            continue\n",
+    "        errs.add(key)\n",
+    "\n",
+    "        vendor = vendor_str(result.testbed.platform)\n",
+    "        outpath = fs.path(outbox, f\"bug-report-{vendor}-{result.id}.c\")            \n",
+    "\n",
+    "        report = get_bug_report(**{\n",
+    "            \"result_id\": result.id,\n",
+    "            \"table\": TABLE,\n",
+    "            \"report_type\": \"w\",\n",
     "        })\n",
     "\n",
     "        with open(outpath, \"w\") as outfile:\n",
