Rename clgen-gpuverify -> clgen_gpuverify

--- a/difftest/Bootstrap.ipynb
+++ b/difftest/Bootstrap.ipynb
@@ -19,7 +19,7 @@
     "$ cd ~/src/project_b/bootstrap && ./03-run-samples.sh\n",
     "\n",
     "# Run GPUVerify on the imported programs:\n",
-    "$ cd ~/src/project_b/difftest && lmk './clgen-gpuverify.py'\n",
+    "$ cd ~/src/project_b/difftest && lmk './clgen_gpuverify.py'\n",
     "\n",
     "# Get the platform and device indices of available OpenCL platforms and devices:\n",
     "$ cldrive --clinfo\n",
