--- a/sec/vs_clsmith.tex
+++ b/sec/vs_clsmith.tex
@@ -34,7 +34,7 @@ Figure~\ref{fig:runtimes} shows runtimes. For CLgen, generation time scales line
 	\scriptsize %
 	\centering %
 	\input{build/tab/outcomes}
-	\caption{Test case outcomes using CLSmith and CLgen for 24 hours each. Configuration \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote build failure (\textbf{bf}), build crash (\textbf{bc}), build timeout (\textbf{bto}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) outcomes for CLSmith and CLgen, respectively. \cc{Asterisk in 'total' column means incomplete data. All results are excluding reductions.}}
+	\caption{Results from 24 hours of testing using CLSmith and CLgen. Configuration \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote build failure (\textbf{bf}), build crash (\textbf{bc}), build timeout (\textbf{bto}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) outcomes for CLSmith and CLgen, respectively. \cc{Asterisk in 'total' column means incomplete data. All results are excluding reductions.}}
 	\label{tab:outcomes}
 \end{table*}
 
